--- a/.classpath
+++ b/.classpath
@@ -8,7 +8,11 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="C:/Users/Francesco/Documents/UnibzProjects/Information Security Project/apache-tomcat-10.0.13/lib/servlet-api.jar"/>
-	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/mssql-jdbc-10.2.0.jre11.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/apache-tomcat-10.0.13">
+		<attributes>
+			<attribute name="owner.project.facets" value="jst.web"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/home/gerard/Documents/uni/cybersecurity/ExamProject/src/main/webapp/WEB-INF/lib/azure-mariadb-connector-java-2.7.0.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
